--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layup Drawer</title>
+    <style>
+        body {
+            height: 100vh;
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        canvas {
+            border: 1px solid #000000;
+            padding: 10px;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <canvas width="500" height="800" id="playground"></canvas>
