--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             align-items: center;
         }
         canvas {
-            border: 1px solid #000000;
-            padding: 10px;
+            padding: 15px 10px;
             border-radius: 10px;
+            box-shadow: 0px -1px 39px -10px rgba(0,0,0,0.5);
         }
     </style>
 </head>
